# cv-repo

./: .gitignore  README.md
cpp-lib/: function.hpp  smart_pointers.hpp  tuple.hpp  unordered_map.hpp
formal_languages/earley/: README.md  earley.py  grammar.py  main.py  parsing.py  test_earley.py
formal_languages/earley/tests/: arifm  incorrect_left_part  lunga_test  lunga_test_2  xd  xd.ans
formal_languages/lr1/: LR.py  README.md  graph.py  main.py  parsing.py  test_lr.py
formal_languages/lr1/tests/: ddx  incorrect_right_part  incorrect_right_part.ans  xd  xd.ans
project-idle/: CMakeLists.txt  README.md  main.cpp
project-idle/res/: Colors.cpp  Fonts.cpp  Fonts.h  Strings.cpp
project-idle/src/: Generator.h  Observable.h  Observer.h  Player.cpp  Player.h
project-idle/util/: BigInteger.cpp  BigInteger.h
project-idle/views/: ButtonComponent.cpp  ButtonComponent.h  Component.cpp  Component.h  Composite.cpp  Composite.h  ImageComponent.cpp  ImageComponent.h  ObserverTextComponent.cpp  ObserverTextComponent.h  RectComponent.cpp  RectComponent.h  RectWithTextComponent.cpp  RectWithTextComponent.h  TextComponent.cpp  TextComponent.h
tg-cipher-bot/: .coveragerc  README.md  facade.py  main.py  requirements.txt
tg-cipher-bot/.github/workflows/: coverage-badge.yml
tg-cipher-bot/cipher_libb/: CaesarCipher.py  Cipher.py  VernamCipher.py  VigenereCipher.py  __init__.py
tg-cipher-bot/res/: handlers.py  kb.py  strings.py
tg-cipher-bot/tests/: test_bot_functionality.py
